Fix memory leak when clearing and trimming clipboard history

BUG: 243658
FIXED-IN:4.8